--- a/client/app/about/aboutcreator.html
+++ b/client/app/about/aboutcreator.html
@@ -1,5 +1,5 @@
 <view-title>เกี่ยวกับผู้สร้างเพื่อนใจ -</view-title>
-<meta name="description" content="ศุภกร เลาหสงคราม - สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม  ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อสังคมโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้</span><br>ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาความดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น" view-head>
+<meta name="description" content="ศุภกร เลาหสงคราม - สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม  ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อสังคมโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้</span><br>ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุฒิจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาความดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น" view-head>
 <meta name="keywords" content="ถาม, ตอบ, ปัญหาใจ, เพื่อนใจ, ศุภกร เลาหสงคราม" view-head>
 <meta property="og:title" content="ศุภกร เลาหสงคราม" view-head/>
 <meta property="og:site_name" content="เพื่อนใจ Soul Friend"view-head/>
@@ -38,15 +38,15 @@
 
 <br><span style="font-size:2em;">ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น</span><br>
 
-ผมได้ตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี เป็นภาษาบารีที่มีความหมายว่า <br><span style="font-size:1.5em;">ชีวิตที่มีการเป็นอยู่ที่เนื่องด้วยการให้ของผู้อื่น</span><br>
+ผมได้ตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี เป็นภาษาบาลีที่มีความหมายว่า <br><span style="font-size:1.5em;">ชีวิตที่มีการเป็นอยู่ที่เนื่องด้วยการให้ของผู้อื่น</span><br>
 
-เว็บเพื่อนใจนี้เป็นผลงานแรกที่มอบให้กับทุกท่าน ผมทํางานด้วยใจจริงๆโดยเอาความดีและความเป็นอยู่ของผมเองมาอยู่บนเส้นด้ายแห่งทานและการให้ของทุกท่าน ดั่งนั้นถ้าต้องการช่วยเหลือและสนับสนุนผมไม่ว่าจะเป็นทางใด มากหรือน้อย ทางด้านร่างกายหรือจิตใจ เช่น คําพูดที่ให้กําลังใจหรือการบริจากข้าวปลาหาร ผมก็จะซาบซึ้งดีใจขอบคุณและมีกําลังใจมากในการทําความดีให้ทุกท่านต่อไปโดยไม่หวังผลตอบแทน<br>
+เว็บเพื่อนใจนี้เป็นผลงานแรกที่มอบให้กับทุกท่าน ผมทํางานด้วยใจจริงๆโดยเอาความดีและความเป็นอยู่ของผมเองมาอยู่บนเส้นด้ายแห่งทานและการให้ของทุกท่าน ดั่งนั้นถ้าต้องการช่วยเหลือและสนับสนุนผมไม่ว่าจะเป็นทางใด มากหรือน้อย ทางด้านร่างกายหรือจิตใจ เช่น คําพูดที่ให้กําลังใจหรือการบริจากข้าวปลาอาหาร ผมก็จะซาบซึ้งดีใจขอบคุณและมีกําลังใจมากในการทําความดีให้ทุกท่านต่อไปโดยไม่หวังผลตอบแทน<br>
 
 ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
 
 <br><span style="font-size:1.5em;">คนทําดีจริงต้องอยู่รอดได้ เพราะมันดีจริง</span><br>
 
-ผมไม่รู้ว่าการเดิมพันครั่งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้ 
+ผมไม่รู้ว่าการเดิมพันครั้งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้ 
 
 นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเข้าแลก
 
