--- a/client/app/report/report.html
+++ b/client/app/report/report.html
@@ -2,7 +2,7 @@
 <div class="container">
 
 	<div class="page-header">
-	  <h1>แจ้งปัญหาของเว็บไช <small>ถ้ามีปัญหาอะไรทางเราจะพยายามแก้ให้ได้เร็วที่สุดครับ</small></h1>
+	  <h1>แจ้งปัญหาของเว็บไชต์ <small>ถ้ามีปัญหาอะไรทางเราจะพยายามแก้ให้ได้เร็วที่สุดครับ</small></h1>
 	</div>
 
 	<div class="panel panel-info">
