--- a/client/app/ask/ask.html
+++ b/client/app/ask/ask.html
@@ -3,7 +3,7 @@
 
 	<div class="row">
 		<div class="col-md-7">
-		<h3 style="text-decoration: underline; text-align: center; font-size: 2em;">ถามปัญหาใจ</h3>
+		<h3 style="text-align: center; font-size: 3em;">ถามปัญหาใจ</h3>
 			<h2 class="blue">ขั้นตอนที่ 1: ถาม</h2>
 			<div id="findAnswer">
 			<textarea id="askStepOne" class="form-control" rows="3" ng-model="searchInput" placeholder="ถามปัญหาใจ..." style="font-size: 1.2em;" popover-placement="bottom" popover="On the Right!" popover-trigger="show">
