--- a/client/app/account/profile/profile.html
+++ b/client/app/account/profile/profile.html
@@ -1,6 +1,4 @@
-<div class="container haveBorder" style="margin-top: 20px; margin-bottom: 20px; -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75); border-radius: 4px;">
+<div class="container haveBorder" style="margin-top: 20px; margin-bottom: 20px;">
 	<div class="row background-blue" style="border-bottom: 1px solid #dddddd;">
 		<div class="col-md-3 bg_blur">
 		</div>
@@ -29,7 +27,7 @@ box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75); border-radius: 4px;">
 
       <tab select="onSelectCategory('myQuestions')">
         <tab-heading>คําถามใจ <span class="badge" style="font-size: inherit;">{{currentUser.questions_count | thousandSuffix}}</span></tab-heading>
-        <div class="row">
+        <div class="row borderTop">
           <div class="col-md-12">
             <div class="list-group" style="margin-bottom: 0;">
                 <a ng-repeat="question in myQuestions" class="list-group-item" ng-href="/questions/{{question._id}}">
@@ -63,14 +61,14 @@ box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75); border-radius: 4px;">
           </div>
         </div>
 
-        <div ng-show="myQuestions.length <= 0"class="row text-center" style="border:1px solid #dddddd; padding:15px; border-radius: 4px;">
+        <div ng-show="myQuestions.length <= 0"class="row text-center emptyResults">
           <h2>คุณยังไม่ได้ถามคําถามใจ</h2>
         </div>
           <a ng-mouseover="shake='animated bounce'" ng-mouseleave="shake=''" class="btn btn-default questionHelpBtn" ng-click="goTo('/ask')" role="button" style="width:100%;"><i ng-class="shake" class="fa fa-question"></i> ถามปัญหา</a>
       </tab>
       <tab select="onSelectCategory('myAnswersInQuestions')">
         <tab-heading>คําถามที่ได้ให้คําตอบ <span class="badge" style="font-size: inherit;">{{currentUser.answers_count | thousandSuffix}}</span></tab-heading>
-        <div class="row">
+        <div class="row borderTop">
           <div class="col-md-12">
             <div class="list-group">
                 <a ng-repeat="question in myAnswersInQuestions" class="list-group-item" ng-href="/questions/{{question._id}}">
@@ -110,7 +108,7 @@ box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75); border-radius: 4px;">
             </div>
           </div>
         </div>
-        <div ng-show="myAnswersInQuestions.length <= 0"class="row text-center" style="border:1px solid #dddddd; padding:15px; border-radius: 4px;">
+        <div ng-show="myAnswersInQuestions.length <= 0"class="row text-center emptyResults">
           <h2>คุณยังไม่ได้ให้ความช่วยเหลือเพื่อนๆ</h2>
         </div>
           <a ng-mouseover="shake='animated bounce'" ng-mouseleave="shake=''" class="btn btn-default questionHelpBtn" ng-click="goTo('/')" role="button" style="width:100%;"><i ng-class="shake" class="fa fa-heart"></i> ตอบปัญหาให้เพื่อนๆ</a>
