--- a/client/app/contact/contact.html
+++ b/client/app/contact/contact.html
@@ -1,7 +1,7 @@
 <view-title>ติดต่อ -</view-title>
 <div class="container animated fadeIn">
 	<div class="page-header">
-	  <h1>ติดต่อเรา <small>ยินดีพูดคุยและรับฟังทุกเรื่องครับ</small></h1>
+	  <h1>ติดต่อ <small>ยินดีพูดคุยและรับฟังทุกเรื่องครับ</small></h1>
 	</div>
 
 	<div>
