--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -1,5 +1,5 @@
 <view-title>{{question.name || 'ไม่มีคําถามนี้ในระบบ'}} -</view-title>
-<meta name="description" content="ปัญหาใจ - {{question.body | htmlToText}}">
+<meta name="description" content="ปัญหาใจ - {{question.body | htmlToText | limitTo:550}}">
 <meta property="og:title" content="{{question.name}}" view-head/>
 <meta property="og:site_name" content="เพื่อนใจ Soul Friend"view-head/>
 <meta property="og:image" itemprop="image primaryImageOfPage" content="/assets/imageview-heads/biglogo.png"/>
@@ -49,7 +49,7 @@
 						</div>
 					</div>
 
-					<div>
+					<div style="padding:15px;">
 						<div ta-bind ng-model="question.body" style="word-wrap: break-word; padding:15px; line-height: 2;"></div>
 						<hr style="width:85%; margin-bottom:10px;">
 						<div class="col-md-10 col-md-offset-1" ng-repeat="comment in question.comments">
@@ -138,14 +138,13 @@
 				<div class="col-md-2 no-gutter" style="margin: 15px 0;">
 					<img class="userIcon" ng-src="{{::answer.coverimg}}" />
 				</div>
-				<div class="col-md-10 no-gutter" style="margin: 10px 0; font-size:0.9em;">
-					<p style="margin: 15px 0;"><a ng-href="/users/{{::question.ownerId}}">{{::answer.username}}</a><small>
+				<div class="col-md-10 col-xs-12 no-gutter" style="margin: 10px 0; font-size:0.9em;">
+					<p style="margin: 15px 15px 15px 0;"><a ng-href="/users/{{::question.ownerId}}">{{::answer.username}}</a><small>
 						- {{::answer.created | timeAgo}} - {{::answer.created | date:'MMM d, y h:mm a'}}</small></p>
 					</div>
 
 				</div>
-
-				<div class="textAngular" ng-bind-html="answer.content" style="word-wrap: break-word; padding:25px;"></div>
+				<div ta-bind ng-model="answer.content" style="word-wrap: break-word; padding:25px;"></div>
 				<hr>
 				<div class="col-md-11 col-md-offset-1" style="padding:0;"ng-repeat="comment in answer.comments">
 					<p style="padding:0; font-size:16px; color:rgb(110, 109, 109);">{{comment.content}} - <span style="color:#999; font-size: 16px;">{{::comment.created | timeAgo}} โดย {{::comment.username}}
