--- a/client/app/service/service.html
+++ b/client/app/service/service.html
@@ -8,5 +8,21 @@
 
 	<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=hjb3qjtavjna4pl098nuf6jtr4%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=Asia%2FBangkok" style=" border-width:0;width:100%; height:610px; margin-bottom: 40px; box-shadow:none; " width="1000" height="600" frameborder="0" scrolling="no"></iframe>
 	</div>
+	
+
+	<h1>ให้ความคิดเห็นเกี่ยวกับกิจกรรมเพื่อนใจ</h1>
+	<div id="disqus_thread" style="padding:20px;"></div>
+	<script type="text/javascript">
+	    /* * * CONFIGURATION VARIABLES * * */
+	    var disqus_shortname = 'puanjai';
+
+	    /* * * DON'T EDIT BELOW THIS LINE * * */
+	    (function() {
+	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	    })();
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 </div>
