--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -138,7 +138,7 @@
 				<div class="col-md-2 no-gutter" style="margin: 15px 0;">
 					<img class="userIcon" ng-src="{{::answer.coverimg}}" />
 				</div>
-				<div class="col-md-10 col-xs-12 no-gutter" style="margin: 10px 0; font-size:0.9em;">
+				<div class="col-md-10 col-xs-12 no-gutter" style="margin: 10px; font-size:0.9em;">
 					<p style="margin: 15px 15px 15px 0;"><a ng-href="/users/{{::question.ownerId}}">{{::answer.username}}</a><small>
 						- {{::answer.created | timeAgo}} - {{::answer.created | date:'MMM d, y h:mm a'}}</small></p>
 					</div>
