--- a/client/app/contact/contact.html
+++ b/client/app/contact/contact.html
@@ -20,7 +20,7 @@
 		  <strong>โทร:</strong> (081) 906-1590, (02) 907-6855<br><br>
 		  <strong>ไลน์:</strong> supakorn_l<br><br>
 		  <strong>เฟสบุ๊ค:</strong> <a ng-href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a><br><br>
-		  <strong>อีเมล์:</strong> <a href="mailto:#">laohasongkram.supakorn@gmail.com</a>
+		  <strong>อีเมล์:</strong> <a href="mailto:#">puanjai.com@gmail.com</a>, <a href="mailto:#">laohasongkram.supakorn@gmail.com</a>
 		</address>
 
 		<address class="col-md-6">
@@ -30,7 +30,7 @@
 		  <strong>Tel:</strong> (081) 906-1590, (02) 907-6855<br><br>
 		  <strong>LINE:</strong> supakorn_l<br><br>
 		  <strong>Facebook:</strong> <a ng-href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram<br><br>
-		  <strong>Email:</strong> <a href="mailto:#">laohasongkram.supakorn@gmail.com</a>
+		  <strong>Email:</strong> <a href="mailto:#">puanjai.com@gmail.com</a>, <a href="mailto:#">laohasongkram.supakorn@gmail.com</a>
 		</address>
 	</div>
 
